# rss-notifier

./: .gitignore  Cargo.toml
src/: email.hb  error_string.rs  index.html  main.rs  site.rs
src/static/: index.html  msg.html
