[package]
name = "rss-notifier"
version = "0.1.0"
authors = ["aQaTL <mmsoltys@outlook.com>"]
edition = "2018"
license = "MIT"

[dependencies]
toml = "0.5.6"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
native-tls = "0.2.3"
lettre = "0.9.2"
lettre_email = "0.9.2"
notify = "5.0.0-pre.2"
chrono = { version = "0.4.11", features = ["serde"] }
uuid = { version = "0.8.1", features = ["v4", "serde"] }
ctrlc = "3.1.3"
structopt = "0.3.8"
url = { version = "2.1.1", features = ["serde"] }
tokio = { version = "0.2", features = ["rt-threaded", "io-driver", "time"] }
futures = "0.3"
env_logger = { version = "0.7.1", features = ["humantime"] }
log = "0.4.8"
rss = "1.9.0"
reqwest = "0.10.4"
enum_from_impler = { git = "https://github.com/aQaTL/enum_from_impler" }
